# pg_pidstat

./: Cargo.toml  README.md  pg_pidstat.control
src/: activity.rs  bgworker.rs  lib.rs  proc_stats.rs  shmem.rs
tests/pg_regress/sql/: setup.sql
