[package]
name = "pg_pidstat"
version = "0.1.0"
edition = "2021"
description = "Per-backend CPU, memory, I/O, and context switch monitoring for PostgreSQL"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_pidstat"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg17"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = []

[dependencies]
pgrx = "0.16.1"
procfs = "0.18"

[dev-dependencies]
pgrx-tests = "0.16.1"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
